Add hidden receipt photo input for Metro scan

--- a/index.html
+++ b/index.html
@@ -410,6 +410,12 @@
                                 <i data-lucide="image"></i>
                                 <span>Завантажити фото</span>
                             </button>
+                            <input
+                                type="file"
+                                id="receiptPhotoInput"
+                                accept="image/*,.heic,.heif"
+                                style="display: none;"
+                            >
                         </div>
                     </div>
 
